# pre-commit-hook-template

./: .pre-commit-hooks.yaml  README.md  setup.cfg  yourhook.py
