[metadata]
name = pre-commit-hook-template
version = 1.0.1
description = Template for pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefsmeets/pre-commit-hook-template
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = yourhook
install_requires =
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    yourhook = yourhook:main

[bdist_wheel]
universal = True